2003-07-02  Peter Fales <peter@fales-lorenz.net>

	* backend/gphoto2.c:  Suppress the "bad parameter" message printed
	  when a camera is not connected, by using Debug level 1

2003-07-01  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* doc/descriptions/unsupported.desc: Added Memorex, Visioneer and
	  Xerox scanners. Updated information for Visioneer scanners.
	
2003-06-28  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* doc/descriptions/unsupported.desc: Added Visioneer OneTouch 5800
	  USB.
	* doc/doxygen-sanei.conf: Update version.

2003-06-25  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* README.darwin: Mention some more working scanners.
	* doc/descriptions/unsupported.desc: Added Brother and Microtek
	  scanners.

2003-06-20  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* tools/sane-desc.c: Mention backend name in warnings and errors.

2003-06-20  Michael Herder <crapsite@gmx.net>

	* doc/descriptions/artec_eplus48u.desc: Updated status fields

2003-06-19  Peter Fales <peter@fales-lorenz.net>

	* doc/descriptions/dc25.desc, dc240.desc: Updated status fields

2003-06-19  Simon Munton <simon@munton.demon.co.uk>

	* doc/descriptions/pie.desc: Updated status fields

2003-06-19  Eddy De Greef <eddy_de_greef at tiscali dot be>

	* doc/descriptions/mustek_pp.desc: Updated status fields of CIS type
	  scanners.
        
2003-06-19  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* doc/descriptions.txt: Changed unmaintained tag to lowercase.
	* doc/descriptions/template.desc. 
	  doc/descriptions-external/template.desc.: Updated according to 
	  descriptions.txt.
	* doc/sane-gt68xx.man doc/descriptions/gt68xx.desc
	  doc/gt68xx/gt68xx.CHANGES: Added RevScan 19200i. Updated
	  device status entries.
	* doc/descriptions/abaton.desc doc/descriptions/agfafocus.desc
	  doc/descriptions/apple.desc doc/descriptions/artec.desc
	  doc/descriptions/dc210.desc doc/descriptions/dll.desc
	  doc/descriptions/dmc.desc doc/descriptions/ibm.desc